--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
   <main>
     <div class="card">
-      <h2>Teachable Machine Model</h2>
+      <h2>Healthy crops, brighter harvests — let AI protect your fields.</h2>
 
       <div class="controls">
         <button id="startWebcam">Start Webcam</button>
@@ -145,3 +145,4 @@
   <script src="app2.js"></script>
 </body>
 </html>
+
